# bloom

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CLAUDE_CODE_PROMPT.md  Dockerfile  README.md  alembic.ini  openapi.json  pyproject.toml  schema.sql
.github/workflows/: ci.yml  release-docker.yml
alembic/: env.py
alembic/versions/: 1cfe1dd99d74_initial_schema.py  3773876ecced_add_brew_user_id_author.py  8da2ccfdf21e_initial_schema.py  9a4c2b7f1e83_roaster_table.py  a7b8c9d0e1f2_rescale_tasting_scores_to_5.py  ac3dea1607c9_initial_schema.py  b2e7c9d4a105_user_username.py  b7c2d3e4f5a6_tasting_unique_brew_user.py  c3f8a1e6b204_bean_lot.py  d4a9f2c1e307_drop_brew_extraction_yield.py  e5b1c7d2f409_user_password_changed_at.py  f6a1c2d3e4b5_bean_roast_type_blend_website_rating.py
bloom/: __init__.py  main.py
bloom/core/: config.py  dependencies.py  email.py  logger.py  security.py
bloom/db/: base.py  init_db.py  session.py
bloom/db/models/: __init__.py  bean.py  bean_lot.py  brew.py  brew_method.py  equipment.py  roaster.py  tasting.py  user.py
bloom/domain/: calculations.py  constants.py  naming.py
bloom/repositories/: bean_lots.py  beans.py  brews.py  lookups.py  roasters.py  tastings.py  users.py
bloom/routes/: auth.py  bean_lots.py  beans.py  brew_methods.py  brews.py  equipment.py  roasters.py  tastings.py  users.py
bloom/schemas/: bean.py  bean_lot.py  brew.py  common.py  lookups.py  roaster.py  tasting.py  user.py
bloom/services/: access.py  auth_service.py  bean_lot_service.py  bean_service.py  brew_service.py  email_service.py  errors.py  lookups_service.py  roaster_service.py  tasting_service.py  users_service.py
bloom/templates/email/: base.html  new_account.html  new_account.txt  reset_password.html  reset_password.txt
docker/: docker-compose.yml
docs/: ARCHITECTURE.md  ios-shortcut.md
frontend/: .oxlintrc.json  README.md  index.html  openapi-ts.config.ts  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: index.css  main.tsx  routeTree.gen.ts
frontend/src/client/: index.ts  schemas.gen.ts  sdk.gen.ts  (+1 more)
scripts/: dump_openapi.py
tests/: README.md  conftest.py
tests/api/: conftest.py  test_auth.py  test_bean_lots.py  test_beans.py  test_brews.py  test_lookups.py  test_ownership.py  test_password_reset.py  test_roasters.py  test_tastings.py  test_users.py
tests/domain/: test_calculations.py  test_constants.py  test_naming.py
(+46 files in other folders)
